[gd_scene load_steps=4 format=3 uid="uid://cfo20g138gkji"]

[ext_resource type="Script" path="res://script/u_i.gd" id="1_21u8a"]
[ext_resource type="Texture2D" uid="uid://byd4w5tppnel3" path="res://asset/sprite/residential-removebg-preview.png" id="2_tb2eu"]
[ext_resource type="Texture2D" uid="uid://buoa5mcs35ko0" path="res://asset/sprite/investment_bank-removebg-preview.png" id="3_gn8hg"]

[node name="UI" type="Control"]
custom_minimum_size = Vector2(200, 500)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_21u8a")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 150)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="worldHealth" type="TextEdit" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 25)
layout_mode = 2

[node name="money" type="TextEdit" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 25)
layout_mode = 2

[node name="people" type="TextEdit" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 25)
layout_mode = 2

[node name="oil" type="TextEdit" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 25)
layout_mode = 2

[node name="energy" type="TextEdit" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 25)
layout_mode = 2

[node name="materials" type="TextEdit" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 25)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(490, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.004
anchor_top = 0.846
anchor_right = 0.004
anchor_bottom = 0.846
offset_left = 0.392
offset_top = -0.208008
offset_right = 490.392
offset_bottom = 99.792

[node name="addResidential" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(78, 100)
layout_mode = 2
icon = ExtResource("2_tb2eu")
expand_icon = true

[node name="addInvestment" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(78, 100)
layout_mode = 2
icon = ExtResource("3_gn8hg")
expand_icon = true

[node name="addMarshall" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(78, 100)
layout_mode = 2

[node name="addOil" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(78, 100)
layout_mode = 2

[node name="addForest" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(78, 100)
layout_mode = 2

[node name="addWind" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(78, 100)
layout_mode = 2

[connection signal="pressed" from="HBoxContainer/addResidential" to="." method="_on_add_residential_pressed"]
[connection signal="pressed" from="HBoxContainer/addInvestment" to="." method="_on_add_investment_pressed"]
[connection signal="pressed" from="HBoxContainer/addMarshall" to="." method="_on_add_marshall_pressed"]
[connection signal="pressed" from="HBoxContainer/addOil" to="." method="_on_add_oil_pressed"]
[connection signal="pressed" from="HBoxContainer/addForest" to="." method="_on_add_forest_pressed"]
[connection signal="pressed" from="HBoxContainer/addWind" to="." method="_on_add_wind_pressed"]
